// Optimized schema: One User has many Addresses (one-to-many)
// User no longer has address string — relation only

Table users {
  id varchar [primary key]
  username varchar [not null]
  password varchar [not null]
  email varchar
  phone varchar
  country_code varchar
  role varchar
  created_at timestamp [not null, default: `now()`]

  indexes {
    username [unique]
  }
}

Enum Status {
  ARCHIVE
  PUBLISHED
}

Table address {
  id varchar [primary key]
  status varchar [not null, note: 'Status (common): ARCHIVE | PUBLISHED']
  name varchar [not null]
  search_address varchar
  address_line1 varchar [not null]
  address_line2 varchar
  city varchar [not null]
  state varchar
  zipcode varchar
  country varchar [not null]
  is_primary boolean [default: false]
  user_id varchar [not null, ref: > users.id]

  indexes {
    user_id
    status
  }
}

// Relation: One user -> many addresses (no address column on users)
// Ref: address.user_id -> users.id

Enum DeliveryStatus {
  PENDING
  CONFIRMED
  PROCESSING
  SHIPPED
  IN_TRANSIT
  DELIVERED
  DELAYED
  FAILED
  CANCELLED
}

Table document {
  id varchar [primary key]
  total_amount integer [not null]
  total_quantity integer [not null]
  user_id varchar [not null, ref: > users.id]
  address_id varchar [ref: > address.id, note: 'default: primary address at checkout']
  delivery_status varchar [not null, note: 'DeliveryStatus']
  created_at timestamp [not null]

  indexes {
    user_id
    delivery_status
  }
}

Table document_item {
  id varchar [primary key]
  document_id varchar [not null, ref: > document.id]
  food_id varchar [not null, ref: > food.id]
  quantity integer [not null]
  unit_price integer [not null]
}

Table cart {
  id varchar [primary key]
  total_amount integer
  total_items integer
  total_quantity integer
  username varchar [note: 'null after checkout']
  status varchar
  cart_link_to varchar [ref: > document.id, note: 'linked to document after checkout']

  indexes {
    username
  }
}

Table cart_item {
  id uuid [primary key]
  food_id varchar [ref: > food.id]
  added_at timestamp
  updated_at timestamp
  quantity integer
  cart_id varchar [ref: > cart.id]
}
